endpoint getUserStars and getUserLevels
